fix alignment on rows

--- a/styles/user.scss
+++ b/styles/user.scss
@@ -46,7 +46,7 @@ table {
       width:$mobile-col-1;
     }
     .quiz-name {
-      width: 45%;
+      width: $mobile-col-4;
       text-align: left;
     }
 
